kubernetes/flux/infrastructure/phase4/monitoring/monitoring.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
